[package]
name = "booster_simulator2024"
authors = ["Janne Kauppinen"]
version = "0.1.0"
edition = "2021"
resolver = "2"
publish = false

[lib]

[[bin]]
name = "app"
path = "src/app.rs"

[dependencies]

dioxus = "0.6.0-alpha.5"
dioxus-desktop = "0.6.0-alpha.5"
dioxus-html = "0.6.0-alpha.5"

serde = "1"
serde_json = "1"
quick-xml = { version="0.37.1", feature=["serialize"]}
thiserror = "2.0.4"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
debug = false
